updated swagger docs in courses sphere
